--- a/app/package.json
+++ b/app/package.json
@@ -18,7 +18,8 @@
         "@solana/web3.js": "^1.62.1",
         "next": "12.3.1",
         "react": "18.2.0",
-        "react-dom": "18.2.0"
+        "react-dom": "18.2.0",
+        "react-loader-spinner": "^5.3.4"
     },
     "devDependencies": {
         "eslint": "8.23.1",
